[package]
name = "http_invoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
again = "0.1"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.72"
serde_json = "1.0"
fred = "6.3.0"
ciborium = "0.2.1"